<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Settings" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_night_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_night_mode_text" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_auto_flip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flip_coin_on_app_start_text" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/FAB_back_button_text"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_media_previous"
        app:backgroundTint="@color/blue" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
