<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ResultTopMargin"
        android:gravity="center"
        android:text="@string/ResultOriginalText"
        android:textSize="@dimen/ResultTextSize"
        android:textColor="@color/ResultCoin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headsCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/HeadsCounterTopMargin"
        android:text="@string/HeadsCounterOriginal"
        android:textSize="@dimen/CoinsResultTextSize"
        android:textColor="@color/Coins"
        app:layout_constraintEnd_toStartOf="@+id/tailsCountText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultText" />

    <TextView
        android:id="@+id/tailsCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/TailsMarginEnd"
        android:text="@string/TailsCounterOriginal"
        android:textSize="@dimen/CoinsResultTextSize"
        android:textColor="@color/Coins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/headsCountText" />


</androidx.constraintlayout.widget.ConstraintLayout>